@@ -291,6 +291,7 @@ clean:
 	cd pocket/scorpio/src/ && make clean && cd ../../../
 	cd pocket/viper01/src/ && make clean && cd ../../../
 	cd pocket/greko/src/ && make clean && cd ../../../
+	cd pocket/scidlet/src/ && make clean && cd ../../../
 	rm -f pocket/toga.exe pocket/glaurung.exe
 	rm -rf pocket/scid_pocket
 
