@@ -24,10 +24,13 @@
 #ifdef WINCE
 #include <tcl.h>
 #endif
+#ifndef POCKETENGINE
 #include "tclmy.h"
 #include "myassert.h"
+#endif
 #include "error.h"
 
+#ifndef POCKETENGINE
 // Include the zlib header file if it is being compiled with Scid:
 #ifndef NO_ZLIB
 #  ifdef ZLIB
@@ -36,7 +39,9 @@
 #    include <zlib.h>
 #  endif
 #endif
-
+#else
+#define ASSERT(f)
+#endif
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // CONSTANTS:
 
