@@ -3090,7 +3090,7 @@ Position::PrintFEN (char * str, uint flags)
     return;
 }
 
-
+#ifndef POCKETENGINE
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Position::DumpHtmlBoard():
 //      Prints the board in a format for use in HTML documents.
@@ -3209,7 +3209,7 @@ Position::DumpLatexBoard (DString * dstr, bool flip)
         } else { dstr->AddChar ('}'); }
     }
 }
-
+#endif
 
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Position::Compare():
